# cartbaba

backend/: README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: data_agent.py  final_agent.py  intent_agent.py  ranking_agent.py  review_agent.py  search_agent.py  tool_agent.py
backend/app/api/routes/: search.py
backend/app/core/: config.py  groq_llm.py  llm.py
backend/app/services/: recommender.py
frontend/: index.html  script.js  style.css
